--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>My Portfolio Page</title>
+        <link rel="stylesheet" type="text/css" href = "style.css">
     </head>
 
     <body>
