--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Relative Paths Assignment 3</title>
+  <title>Student Bio</title>
 
   <!-- Fill in the href to the CSS such that this HTML file can access the CSS -->
   <!-- Don't move the HTML or CSS file. Use Relative Linking -->
@@ -24,7 +24,7 @@
 
       <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
 
-      <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+      <p>I currently live in Fishtown. I work at Liberty Mutual Insurance as a Casualty Adjuster.</p>
     </section>
 
     <section id="contact-info">
